--- a/k8s/master/unit-files/kube-apiserver.service
+++ b/k8s/master/unit-files/kube-apiserver.service
@@ -32,7 +32,7 @@ ExecStart=/opt/k8s/bin/kube-apiserver \
   --tls-private-key-file=${key_file} \
   --token-auth-file=${token_auth_file} \
   --v=2
-ExecStartPost=-/bin/bash -c "until /usr/bin/curl --cacert ${ca_file} --key ${client_key_file} --cert ${client_cert_file} https://$${COREOS_PRIVATE_IPV4}:${secure_port}; do echo \"waiting for API server to come online...\"; sleep 5 done"
+ExecStartPost=-/bin/bash -c "until /usr/bin/curl --cacert ${ca_file} --key ${client_key_file} --cert ${client_cert_file} https://$${COREOS_PRIVATE_IPV4}:${secure_port}; do echo \"waiting for API server to come online...\"; sleep 5; done"
 Restart=on-failure
 RestartSec=5
 TimeoutSec=20
