--- a/apps/guestbook/redis.yml
+++ b/apps/guestbook/redis.yml
@@ -15,7 +15,7 @@ spec:
     tier: backend
 
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: redis-master
@@ -56,7 +56,7 @@ spec:
     tier: backend
 
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: redis-slave
