--- a/etcd/config.yaml
+++ b/etcd/config.yaml
@@ -3,6 +3,8 @@ etcd:
   discovery: ${discovery_url}
   name: "{HOSTNAME}"
 
+  data_dir: ${data_dir}
+
   advertise_client_urls: https://{PRIVATE_IPV4}:${etcd_client_port}
   initial_advertise_peer_urls: https://{PRIVATE_IPV4}:${etcd_peer_port}
   listen_client_urls: https://0.0.0.0:${etcd_client_port}
@@ -18,7 +20,32 @@ etcd:
   cert_file: ${cert_file}
   key_file: ${key_file}
 
+systemd:
+  units:
+    - name: var-lib-etcd.mount
+      enable: true
+      contents: |
+        [Unit]
+        Description=etcd data folder
+        Before=etcd-member.service
+
+        [Mount]
+        What=${device_path}
+        Where=${data_dir}
+        Type=ext4
+
+        [Install]
+        RequiredBy=etcd-member.service
+        WantedBy=multi-user.target
+
 storage:
+  filesystems:
+    - mount:
+        device: ${device_path}
+        format: ext4
+        create:
+          force: true
+
   files:
     - path: ${ca_cert_file}
       filesystem: root
