--- a/etcd/config.yaml
+++ b/etcd/config.yaml
@@ -56,3 +56,15 @@ storage:
         id: 500
       group:
         id: 500
+
+update:
+  group: ${update_channel}
+
+locksmith:
+  reboot_strategy: etcd-lock
+  window_start: ${maintenance_window_start}
+  window_length: ${maintenance_window_length}
+  etcd_endpoints: https://{PRIVATE_IPV4}:${etcd_peer_port}
+  etcd_cafile: ${ca_cert_file}
+  etcd_certfile: ${cert_file}
+  etcd_keyfile: ${key_file}
