Replace common TLS cert and key with component-specific certs and keys

--- a/etcd/config.yaml
+++ b/etcd/config.yaml
@@ -11,12 +11,12 @@ etcd:
   listen_peer_urls: https://{PRIVATE_IPV4}:${etcd_peer_port}
 
   peer_client_cert_auth: true
-  peer_trusted_ca_file: ${ca_cert_file}
+  peer_trusted_ca_file: ${cacert_file}
   peer_cert_file: ${cert_file}
   peer_key_file: ${key_file}
 
   client_cert_auth: true
-  trusted_ca_file: ${ca_cert_file}
+  trusted_ca_file: ${cacert_file}
   cert_file: ${cert_file}
   key_file: ${key_file}
 
@@ -47,11 +47,11 @@ storage:
           force: true
 
   files:
-    - path: ${ca_cert_file}
+    - path: ${cacert_file}
       filesystem: root
       mode: 0644
       contents:
-        inline: ${ca_cert}
+        inline: ${cacert}
       user:
         id: 500
       group:
@@ -62,7 +62,7 @@ storage:
       contents:
         inline: |
           source /run/metadata/coreos
-          export ETCDCTL_CA_FILE=${ca_cert_file}
+          export ETCDCTL_CA_FILE=${cacert_file}
           export ETCDCTL_CERT_FILE=${cert_file}
           export ETCDCTL_KEY_FILE=${key_file}
           export ETCDCTL_ENDPOINTS=https://$${COREOS_DIGITALOCEAN_IPV4_PRIVATE_0}:${etcd_client_port}
@@ -75,6 +75,6 @@ locksmith:
   window_start: ${maintenance_window_start}
   window_length: ${maintenance_window_length}
   etcd_endpoints: https://{PRIVATE_IPV4}:${etcd_client_port}
-  etcd_cafile: ${ca_cert_file}
+  etcd_cafile: ${cacert_file}
   etcd_certfile: ${cert_file}
   etcd_keyfile: ${key_file}
