Locksmith configurations in k8s droplets

--- a/k8s/workers/config.yaml
+++ b/k8s/workers/config.yaml
@@ -62,3 +62,15 @@ files:
       id: 500
     contents:
       inline: ${kube_proxy_config}
+
+update:
+  group: ${update_channel}
+
+locksmith:
+  reboot_strategy: etcd-lock
+  window_start: ${maintenance_window_start}
+  window_length: ${maintenance_window_length}
+  etcd_endpoints: https://{PRIVATE_IPV4}:${etcd_client_port}
+  etcd_cafile: ${cacert_file}
+  etcd_certfile: ${cert_file}
+  etcd_keyfile: ${key_file}
