--- a/k8s/master/config.yaml
+++ b/k8s/master/config.yaml
@@ -31,7 +31,7 @@ systemd:
           --etcd-servers=${etcd_endpoints} \
           --event-ttl=1h \
           --experimental-encryption-provider-config=${apiserver_encryption_config_file} \
-          --insecure-bind-address=0.0.0.0 \
+          --insecure-bind-address=$${COREOS_DIGITALOCEAN_IPV4_PRIVATE_0} \
           --insecure-port=${apiserver_insecure_port} \
           --kubelet-certificate-authority=${cacert_file} \
           --kubelet-client-certificate=${cert_file} \
@@ -100,7 +100,7 @@ systemd:
         EnvironmentFile=/run/metadata/coreos
         ExecStart=/opt/k8s/bin/kube-scheduler \
           --leader-elect=true \
-          --master=http://$${COREOS_DIGITALOCEAN_IPV4_PRIVATE_0}:${apiserver_insecure_port}\
+          --master=http://$${COREOS_DIGITALOCEAN_IPV4_PRIVATE_0}:${apiserver_insecure_port} \
           --v=2
         Restart=on-failure
         RestartSec=5
