--- a/k8s/master/config.yaml
+++ b/k8s/master/config.yaml
@@ -22,6 +22,7 @@ systemd:
           --audit-log-maxbackup=3 \
           --audit-log-maxsize=100 \
           --audit-log-path=/var/log/audit.log \
+          --authorization-mode=Node,RBAC \
           --bind-address=0.0.0.0 \
           --client-ca-file=${cacert_file} \
           --enable-swagger-ui=true \
