--- a/k8s/workers/config.yaml
+++ b/k8s/workers/config.yaml
@@ -52,16 +52,33 @@ systemd:
         [Install]
         WantedBy=multi-user.target
 
-files:
-  - path: ${kube_proxy_config_file}
-    filesystem: root
-    mode: 0644
-    user:
-      id: 500
-    group:
-      id: 500
-    contents:
-      inline: ${kube_proxy_config}
+storage:
+  files:
+    - path: ${kube_proxy_config_file}
+      filesystem: root
+      mode: 0644
+      user:
+        id: 500
+      group:
+        id: 500
+      contents:
+        inline: ${kube_proxy_config}
+    - path: /etc/systemd/resolved.conf.d/00-droplet.conf
+      filesystem: root
+      mode: 0644
+      user:
+        id: 0
+      group:
+        id: 0
+      contents:
+        inline: |
+          [Resolve]
+          DNS=${dns_server}
+          Domains=${domain}
+          LLMNR=yes
+          DNSSEC=allow-downgrade
+          Cache=yes
+          DNSStubListener=udp
 
 update:
   group: ${update_channel}
