Enable kubelet authentication and authorization options.
The API server TLS cert is updated to use the system:masters organization, which is translated by kubernetes into the user's group.
This group is authorized to access all the different resources.

--- a/k8s/workers/config.yaml
+++ b/k8s/workers/config.yaml
@@ -16,6 +16,10 @@ systemd:
         ExecStart=/opt/k8s/bin/kubelet \
           --allow-privileged=true \
           --address=$${COREOS_DIGITALOCEAN_IPV4_PRIVATE_0} \
+          --anonymous-auth=false \
+          --authentication-token-webhook \
+          --authorization-mode=Webhook \
+          --client-ca-file=${cacert_file} \
           --cluster-dns=${cluster_dns_ip} \
           --cluster-domain=${cluster_domain} \
           --container-runtime=docker \
