--- a/k8s/workers/config.yaml
+++ b/k8s/workers/config.yaml
@@ -19,6 +19,8 @@ systemd:
           --anonymous-auth=false \
           --authentication-token-webhook \
           --authorization-mode=Webhook \
+          --bootstrap-kubeconfig=${kubelet_bootstrap_kubeconfig} \
+          --cert-dir=${cert_dir} \
           --client-ca-file=${cacert_file} \
           --cluster-dns=${cluster_dns_ip} \
           --cluster-domain=${cluster_domain} \
@@ -28,11 +30,8 @@ systemd:
           --image-pull-progress-deadline=2m \
           --kubeconfig=${kubelet_kubeconfig} \
           --register-node=true \
-          --require-kubeconfig=true \
           --root-dir=${lib_home} \
           --runtime-request-timeout=10m \
-          --tls-cert-file=${cert_file} \
-          --tls-private-key-file=${key_file} \
           --v=2
         Restart=on-failure
         RestartSec=5
@@ -58,15 +57,6 @@ systemd:
 
 storage:
   files:
-    - path: ${kube_proxy_config_file}
-      filesystem: root
-      mode: 0644
-      user:
-        id: 500
-      group:
-        id: 500
-      contents:
-        inline: ${kube_proxy_config}
     - path: /etc/systemd/resolved.conf.d/00-droplet.conf
       filesystem: root
       mode: 0644
