Fix locksmith etcd endpoints.
Also, replace DO image ID with slug because the ID changes.

--- a/k8s/master/config.yaml
+++ b/k8s/master/config.yaml
@@ -137,7 +137,7 @@ locksmith:
   reboot_strategy: etcd-lock
   window_start: ${maintenance_window_start}
   window_length: ${maintenance_window_length}
-  etcd_endpoints: https://{PRIVATE_IPV4}:${etcd_client_port}
+  etcd_endpoints: ${etcd_endpoints}
   etcd_cafile: ${cacert_file}
   etcd_certfile: ${cert_file}
   etcd_keyfile: ${key_file}
