--- a/k8s/workers/config.yaml
+++ b/k8s/workers/config.yaml
@@ -58,15 +58,6 @@ systemd:
 
 storage:
   files:
-    - path: ${kube_proxy_config_file}
-      filesystem: root
-      mode: 0644
-      user:
-        id: 500
-      group:
-        id: 500
-      contents:
-        inline: ${kube_proxy_config}
     - path: /etc/systemd/resolved.conf.d/00-droplet.conf
       filesystem: root
       mode: 0644
@@ -91,7 +82,7 @@ locksmith:
   reboot_strategy: etcd-lock
   window_start: ${maintenance_window_start}
   window_length: ${maintenance_window_length}
-  etcd_endpoints: https://{PRIVATE_IPV4}:${etcd_client_port}
+  etcd_endpoints: ${etcd_endpoints}
   etcd_cafile: ${cacert_file}
   etcd_certfile: ${cert_file}
   etcd_keyfile: ${key_file}
